objects/Snapshot_Log__c.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Final__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Final</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Period_End__c</fullName>
        <label>Period End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period_Start__c</fullName>
        <label>Period Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>School</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Snapshot Log</relationshipLabel>
        <relationshipName>Snapshot_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Setup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Setup</label>
        <referenceTo>Setup__c</referenceTo>
        <relationshipLabel>Snapshot Log</relationshipLabel>
        <relationshipName>Snapshot_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Snapshot_Taken__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Snapshot Taken</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Snapshot_Type__c</fullName>
        <label>Snapshot Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Snapshot Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Snapshot ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Snapshot Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>